# shoebox

./: .gitignore  CLAUDE.md  README.md  STYLE_GUIDE.md  build-all.sh  fix-flatpak-deps.py  meson.build  meson_options.txt  requirements.txt  run.sh
.claude/: settings.json
.forgejo/workflows/: ci.yml  publish.yml
.github/workflows/: flatpak.yml
build-aux/flatpak/: build-flatpak.sh  land.rob.Shoebox.json  land.rob.shoebox.json  python3-deps.json
data/: land.rob.Shoebox.desktop.in.in  land.rob.Shoebox.gschema.xml  land.rob.Shoebox.metainfo.xml.in.in  land.rob.shoebox.desktop.in  land.rob.shoebox.gschema.xml  land.rob.shoebox.metainfo.xml.in  meson.build  shoebox.gresource.xml
data/ui/: detail.blp  gallery.blp  land.rob.shoebox.gresource.xml  meson.build  preferences.blp  search.blp  setup-dirs.blp  setup-login.blp  setup-server.blp  setup-welcome.blp  style.css  thumbnail-tile.blp
docs/: ml-roadmap.md  quickstart.md
po/: POTFILES.in  meson.build
src/: meson.build  shoebox.in
src/shoebox/: __init__.py  application.py  background_portal.py  database.py  exif_writer.py  logging_setup.py  main.py  secrets.py  settings.py  window.py  worker.py
src/shoebox/backends/: __init__.py  base.py  immich.py
src/shoebox/sync/: conditions.py  manager.py  scanner.py
src/shoebox/ui/: bulk_date_dialog.py  bulk_edit_dialog.py  detail.py  edit_dialog.py  gallery.py  preferences.py  search.py  setup.py  widgets.py
tests/: conftest.py  test_smoke.py  test_sync_conditions.py  test_sync_manager.py  test_sync_stream.py
